tests/snapshots/run_wpt_conformance__coreml_instanceNormalization_float16_4D_tensor_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
instance_normalization.https.any.js instanceNormalization float16 4D tensor all options, coreml
 instance_normalization :: instanceNormalization float16 4D tensor all options: index 0: actual=-1.6826172 expected=70.75 ulp=37671 tolerance=8400
  inputs: instanceNormInput: [-97.9375, 41.34375, 35.8125, 29.4375, -59.78125, -6.94921875, -73.9375, -74.6875, 54.4375, -38.125, -68.1875, 47.53125, 66.9375, 37.375, 73.875, 76.75, 56.25, -99, 5.67578125, -16.578125, -33.125, 25.6875, 42.9375, -17.375]; instanceNormBias: [-33.0625, 4.51171875, -37.9375] (constant); instanceNormScale: [-94.4375, 66.6875, -98.5625] (constant)
  expected instanceNormOutput: [70.75, 119.3125, -50.78125, -179.75, -22.828125, 126, 23.5625, -43.78125, -127.75, -46.84375 ...] (len=24)
  actual instanceNormOutput: [-1.6826172, 0.97265625, 0.8671875, 0.74560547, -0.9550781, 0.05203247, -0.8730469, -0.88671875, 1.4404297, -0.22766113 ...] (len=24)
  expected instanceNormOutput full nd:
[70.75, 119.3125, -50.78125, -179.75, -22.828125, 126, 23.5625, -43.78125, -127.75, -46.84375, ...] (len=24, shape=[2, 2, 2, 3])
  actual instanceNormOutput full nd:
[-1.6826172, 0.97265625, 0.8671875, 0.74560547, -0.9550781, 0.05203247, -0.8730469, -0.88671875, 1.4404297, -0.22766113, ...] (len=24, shape=[2, 2, 2, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    instanceNormInput: f16[2, 2, 2, 3];
  }

  consts {
    operand_0: f16[3] @bytes([34, 208, 131, 68, 190, 208]);
    operand_2: f16[3] @bytes([231, 213, 43, 84, 41, 214]);
  }

  nodes {
    [instanceNormOutput] = instanceNormalization(instanceNormInput, bias=0, epsilon=1e-6, label="", layout="nhwc", scale=2);
  }

  outputs { instanceNormOutput; }
}
