tests/snapshots/run_wpt_conformance__coreml_instanceNormalization_float16_4D_tensor_options_bias.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
instance_normalization.https.any.js instanceNormalization float16 4D tensor options.bias, coreml
 instance_normalization :: instanceNormalization float16 4D tensor options.bias: index 1: actual=1.5527344 expected=-31.515625 ulp=36375 tolerance=8400
  inputs: instanceNormInput: [-97.9375, 29.4375, -73.9375, -38.125, 41.34375, -59.78125, -74.6875, -68.1875, 35.8125, -6.94921875, 54.4375, 47.53125, 66.9375, 76.75, 5.67578125, 25.6875, 37.375, 56.25, -16.578125, 42.9375, 73.875, -99, -33.125, -17.375]; instanceNormBias: [-33.0625, 4.51171875, -37.9375] (constant)
  expected instanceNormOutput: [-34.15625, -31.515625, -33.65625, -32.90625, 6.234375, 4.1015625, 3.7871094, 3.9238281, -37.8125, -39.59375 ...] (len=24)
  actual instanceNormOutput: [-1.0996094, 1.5527344, -0.5996094, 0.14611816, 1.7216797, -0.4099121, -0.7241211, -0.58691406, 0.13024902, -1.6630859 ...] (len=24)
  expected instanceNormOutput full nd:
[-34.15625, -31.515625, -33.65625, -32.90625, 6.234375, 4.1015625, 3.7871094, 3.9238281, -37.8125, -39.59375, ...] (len=24, shape=[2, 3, 2, 2])
  actual instanceNormOutput full nd:
[-1.0996094, 1.5527344, -0.5996094, 0.14611816, 1.7216797, -0.4099121, -0.7241211, -0.58691406, 0.13024902, -1.6630859, ...] (len=24, shape=[2, 3, 2, 2])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    instanceNormInput: f16[2, 3, 2, 2];
  }

  consts {
    operand_0: f16[3] @bytes([34, 208, 131, 68, 190, 208]);
  }

  nodes {
    [instanceNormOutput] = instanceNormalization(instanceNormInput, bias=0, epsilon=0.00001, label="", layout="", scale=null);
  }

  outputs { instanceNormOutput; }
}
