tests/snapshots/run_wpt_conformance__coreml_instanceNormalization_float16_4D_tensor_options_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
instance_normalization.https.any.js instanceNormalization float16 4D tensor options.scale, coreml
 instance_normalization :: instanceNormalization float16 4D tensor options.scale: index 0: actual=-1.0996094 expected=103.8125 ulp=37603 tolerance=8400
  inputs: instanceNormInput: [-97.9375, 29.4375, -73.9375, -38.125, 41.34375, -59.78125, -74.6875, -68.1875, 35.8125, -6.94921875, 54.4375, 47.53125, 66.9375, 76.75, 5.67578125, 25.6875, 37.375, 56.25, -16.578125, 42.9375, 73.875, -99, -33.125, -17.375]; instanceNormScale: [-94.4375, 66.6875, -98.5625] (constant)
  expected instanceNormOutput: [103.8125, -146.625, 56.625, -13.796875, 114.8125, -27.34375, -48.28125, -39.15625, -12.8359375, 163.875 ...] (len=24)
  actual instanceNormOutput: [-1.0996094, 1.5527344, -0.5996094, 0.14611816, 1.7216797, -0.4099121, -0.7241211, -0.58691406, 0.13024902, -1.6630859 ...] (len=24)
  expected instanceNormOutput full nd:
[103.8125, -146.625, 56.625, -13.796875, 114.8125, -27.34375, -48.28125, -39.15625, -12.8359375, 163.875, ...] (len=24, shape=[2, 3, 2, 2])
  actual instanceNormOutput full nd:
[-1.0996094, 1.5527344, -0.5996094, 0.14611816, 1.7216797, -0.4099121, -0.7241211, -0.58691406, 0.13024902, -1.6630859, ...] (len=24, shape=[2, 3, 2, 2])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    instanceNormInput: f16[2, 3, 2, 2];
  }

  consts {
    operand_1: f16[3] @bytes([231, 213, 43, 84, 41, 214]);
  }

  nodes {
    [instanceNormOutput] = instanceNormalization(instanceNormInput, bias=null, epsilon=0.00001, label="", layout="", scale=1);
  }

  outputs { instanceNormOutput; }
}
